--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/cargo_users?serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=CargoUsers
+
+spring.jpa.show-sql=true
+
+spring.flyway.url=jdbc:mysql://localhost:3306/cargo_users?serverTimezone=UTC
+spring.flyway.user=root
+spring.flyway.password=CargoUsers
