--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
                 <configuration>
                     <url>jdbc:mysql://localhost:3306/cargo_users?serverTimezone=UTC</url>
                     <user>root</user>
-                    <password>CargoUsers</password>
+                    <password>17171717</password>
                 </configuration>
                 <dependencies>
                     <dependency>
