--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=8041
 
 spring.datasource.url=jdbc:mysql://localhost:3306/cargo_users?serverTimezone=UTC
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=CargoUsers
+spring.datasource.password=17171717
 
 spring.jpa.show-sql=true
 
 spring.flyway.url=jdbc:mysql://localhost:3306/cargo_users?serverTimezone=UTC
 spring.flyway.user=root
-spring.flyway.password=CargoUsers
+spring.flyway.password=17171717
