--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.show-sql=true
 spring.flyway.url=jdbc:mysql://localhost:3306/cargo_users?serverTimezone=UTC
 spring.flyway.user=root
 spring.flyway.password=17171717
+
+jwt.token.secret=cargohub
+jwt.token.expired=5000000
