added handling 400, 401, 403, 404, 409; added UserConflictException and UserNotFoundException; changed type of exceptions in UserServiceImpl

--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,8 @@
                 <configuration>
                     <url>jdbc:mysql://localhost:3306/cargo_users?serverTimezone=UTC</url>
                     <user>root</user>
-                    <password>CargoUsers</password>
+                    <password></password>
+                    <!--                    <password>CargoUsers</password>-->
                 </configuration>
                 <dependencies>
                     <dependency>
