--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,14 @@ server.port=8041
 spring.datasource.url=jdbc:mysql://localhost:3306/cargo_users?serverTimezone=UTC
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Thisispassword1!
+spring.datasource.password=CargoUsers
 
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.flyway.url=jdbc:mysql://localhost:3306/cargo_users?serverTimezone=UTC
 spring.flyway.user=root
-spring.flyway.password=Thisispassword1!
+spring.flyway.password=CargoUsers
 
 jwt.token.secret=cargohub
 jwt.token.expired=5000000
