--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8041
 
-spring.datasource.url=jdbc:mysql://localhost:3306/cargo_users?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/cargo_users?serverTimezone=Europe/Kiev
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=CargoUsers
@@ -8,7 +8,7 @@ spring.datasource.password=CargoUsers
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.flyway.url=jdbc:mysql://localhost:3306/cargo_users?serverTimezone=UTC
+spring.flyway.url=jdbc:mysql://localhost:3306/cargo_users?serverTimezone=Europe/Kiev
 spring.flyway.user=root
 spring.flyway.password=CargoUsers
 
