--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,39 +39,31 @@ services:
       - back
 
   db_neo4j:
-    image: neo4j:3.5.4-enterprise
-#    hostname: neo4j
-#    restart: unless-stopped
-    container_name: neo4j
+    image: my-neo4j:latest
+    container_name: neo4j-ap
     ports:
       - "7473:7473"
       - "7474:7474"
       - "7687:7687"
-    volumes:
-      - ./test-plugins:/plugins
-      - ./data:/import
+#    volumes:
+#      - ./data:/import
     environment:
       - NEO4J_AUTH=neo4j/Graph1
       - NEO4J_ACCEPT_LICENSE_AGREEMENT=yes
       - NEO4J_dbms_security_procedures_unrestricted=apoc.*,algo.*
+
     networks:
       - back
 
-#  front:
-#    image: cargo-front
-#    container_name: ui-cargo
-#    volumes:
-#      - .:/app
-#      - /app/node_modules
-#    environment:
-#      - CI=true
-#      - CHOKIDAR_USEPOLLING=true
-#    stdin_open: true
-#    tty: true
-#    ports:
-#      - 3001:3000
-#    networks:
-#      - back
+  front:
+    image: cargo-front
+    container_name: ui-cargo
+    stdin_open: true
+    tty: true
+    ports:
+      - 3001:3000
+    networks:
+      - back
 
 networks:
   back:
