auto migrations on app run added

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
             <version>2.3.7</version>
         </dependency>
 
+        <!-- FlyWay -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>6.4.4</version>
+        </dependency>
+
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
